# RAG-Insurance

./: .dockerignore  .drone.yml  .env  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  ask_llm.py  change_notes.py  claim_descriptions.json  commands.txt  data_model.json  descriptions.json  doc_generator.py  docker-compose.yml  dockerfile.backend  dockerfile.frontend  image_search.py  llm_interaction.py  main.py  makefile  package-lock.json  populate_embeddings.py  requirements.txt  retriever.py  test.py
backend/: .gitignore  Dockerfile  README.md  ask_llm.py  bedrock_client.py  embeddingsInitializer.py  image_search.py  main.py  pyproject.toml  requirements.txt
data/: demo_rag_insurance.claims.json
environment/: prod-frontend.yaml  prod.yaml  staging-frontend.yaml  staging.yaml
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.js  page.js
frontend/app/api/askTheLlm/: route.js
frontend/components/AskLeafy/: AskLeafy.js  askLeafy.module.css
frontend/components/InfoWizard/: InfoWizard.jsx  InfoWizard.module.css
frontend/components/navBar/: Navbar.jsx  navbar.module.css
frontend/components/userProfile/: UserProfile.jsx  userProfile.module.css
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/_components/navBar/: Navbar.jsx  navbar.module.css
frontend/src/_components/userProfile/: UserProfile.jsx  userProfile.module.css
frontend/src/_pages/AskLeafy/: AskLeafy.js  askLeafy.module.css
routes/: route.py
(+2 files in other folders)
